--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 <body>
     <section class="sub-header">
         <nav>
-            <a href="sohan.html"><img src="images/logo.png" alt="University Logo"></a>
+            <a href="index.html"><img src="images/logo.png" alt="University Logo"></a>
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul>
