--- a/academics.html
+++ b/academics.html
@@ -12,11 +12,11 @@
 <body>
     <section class="sub-header">
         <nav>
-            <a href="sohan.html"><img src="images/logo.png" alt="University Logo"></a>
+            <a href="index.html"><img src="images/logo.png" alt="University Logo"></a>
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul>
-                    <li><a href="sohan.html">HOME</a></li>
+                    <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT US</a></li>
                     <li><a href="courses.html">COURSES</a></li>
                     <li><a href="academics.html">ACADEMICS</a></li>
