Update logo link from sohan.html to index.html

--- a/admission.html
+++ b/admission.html
@@ -16,7 +16,7 @@
     <!-- Admissions Hero -->
     <section class="admissions-hero">
         <nav>
-        <a href="sohan.html"><img src="images/logo.png" alt="University Logo" class="hero-logo"></a>
+        <a href="index.html"><img src="images/logo.png" alt="University Logo" class="hero-logo"></a>
         </nav>
         <h1>Admissions 2025–26</h1>
         <h3>Empowering students through quality education and holistic development</h3>
