--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul>
-                    <li><a href="sohan.html">HOME</a></li>
+                    <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT US</a></li>
                     <li><a href="courses.html">COURSES</a></li>
                     <li><a href="academics.html">ACADEMICS</a></li>           
