Change login link from sohan.html to index.html

--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
         <div class="login-container">
             <div class="login-header">
             <div class="logo">
-            <a href="sohan.html">
+            <a href="index.html">
             <img src="images/logo.png" alt="College Logo">
             </a>
             </div>
