Update testimonial author from Ashish to Richa

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <img src="images/user1.jpg" alt="Student Image 1">
                 <div>
                     <p>"The university has provided me with incredible opportunities to learn and grow. The faculty is supportive, and the campus environment is vibrant."</p>
-                    <h3>Ashish Tiwari</h3>
+                    <h3>Richa Ranjan</h3>
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
